Sat Dec 19 16:56:02 1998  Owen Taylor  <otaylor@redhat.com>

	* glib.h gmain.c (G_PRIORITY_LOW): Add #defines defining
	scale of priorities.

Sat Dec 19 16:56:02 1998  Owen Taylor  <otaylor@redhat.com>

	* gmain.c (g_main_poll): Allocate space for pollfd's
	_after_ adding poll wake-up-pipe record.

	* gmain.c (g_main_add_poll): Changed name
	of internal function g_main_add_poll_unlocked()
	back from the non-sensical g_main_add_unlocking_poll().

Sat Dec 19 06:25:55 1998  Tim Janik  <timj@gtk.org>

	* glib.m4: fixed a minor bug that would let configures bail out
	if the MODULES argument contained newlines.

	* acglib.m4: new file to be included by configure.in. it holds
	special GLIB_ autoconfiguration macros, eventually some of the
	easier ones should be moved into glib.m4, e.g. GLIB_IF_VAR_EQ,
	GLIB_STR_CONTAINS or GLIB_ADD_TO_VAR.

Sat Dec 19 04:27:17 1998  Tim Janik  <timj@gtk.org>

	* fixed up sys/poll.h and sys/types.h inclusions.

Sat Dec 19 03:10:50 1998  Tim Janik  <timj@gtk.org>

	* fixed up gthread includes, cleaned up glibconfig.h a little bit.

Fri Dec 18 12:51:39 1998  Owen Taylor  <otaylor@redhat.com>

	* gmain.c: Fix errors in computation of timeout
	expiration times > 1sec.

1998-12-18  Sebastian Wilhelmi  <wilhelmi@ira.uka.de>

	* configure.in (have_threads): Changed the last pthread_cond_init
	to pthread_attr_init.

Fri Dec 18 00:03:17 1998  Tim Janik  <timj@gtk.org>

	* glib.h: 
	* gmain.c:
	(g_main_is_running): new function to check whether a main loop has been
	quitted.
	(g_main_new): added a gboolean argument to determine whether the loop
	should be considered initially running or not. however, g_main_run ()
 	will still reset the main loops running state to TRUE upon initial
 	entrance.

	* gmain.c:
 	(g_main_iterate): documented this function's purpose in 5 steps.
 	for step 2), flag sources as G_SOURCE_READY even if !dispatch and
	check G_SOURCE_READY prior to (*prepare), so we don't call (*prepare)
 	on them multiple times.
